# zsh_chatbot_mcp

./: README.md  pyproject.toml
src/client/: client.py  gui.py  main.py
src/server/: weather.py
